@@ -34,31 +34,33 @@
 #define __pse51_sem_destroy           8
 #define __pse51_sem_post              9
 #define __pse51_sem_wait              10
-#define __pse51_clock_getres          11
-#define __pse51_clock_gettime         12
-#define __pse51_clock_settime         13
-#define __pse51_clock_nanosleep       14
-#define __pse51_mutex_init            15
-#define __pse51_mutex_destroy         16
-#define __pse51_mutex_lock            17
-#define __pse51_mutex_timedlock       18
-#define __pse51_mutex_trylock         19
-#define __pse51_mutex_unlock          20
-#define __pse51_cond_init             21
-#define __pse51_cond_destroy          22
-#define __pse51_cond_wait             23
-#define __pse51_cond_timedwait        24
-#define __pse51_cond_signal           25
-#define __pse51_cond_broadcast        26
-#define __pse51_mq_open               27
-#define __pse51_mq_close              28
-#define __pse51_mq_unlink             29
-#define __pse51_mq_getattr            30
-#define __pse51_mq_setattr            31
-#define __pse51_mq_send               32
-#define __pse51_mq_timedsend          33
-#define __pse51_mq_receive            34
-#define __pse51_mq_timedreceive       35
+#define __pse51_sem_trywait           11
+#define __pse51_sem_getvalue          12
+#define __pse51_clock_getres          13
+#define __pse51_clock_gettime         14
+#define __pse51_clock_settime         15
+#define __pse51_clock_nanosleep       16
+#define __pse51_mutex_init            17
+#define __pse51_mutex_destroy         18
+#define __pse51_mutex_lock            19
+#define __pse51_mutex_timedlock       20
+#define __pse51_mutex_trylock         21
+#define __pse51_mutex_unlock          22
+#define __pse51_cond_init             23
+#define __pse51_cond_destroy          24
+#define __pse51_cond_wait             25
+#define __pse51_cond_timedwait        26
+#define __pse51_cond_signal           27
+#define __pse51_cond_broadcast        28
+#define __pse51_mq_open               29
+#define __pse51_mq_close              30
+#define __pse51_mq_unlink             31
+#define __pse51_mq_getattr            32
+#define __pse51_mq_setattr            33
+#define __pse51_mq_send               34
+#define __pse51_mq_timedsend          35
+#define __pse51_mq_receive            36
+#define __pse51_mq_timedreceive       37
 
 #ifdef __KERNEL__
 
